--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -67,7 +67,7 @@
         &:hover,
         &.active,
         &:focus {
-            color: $_DA569F !important;
+            color: #231F20 !important;
         }
     }
     & .boxed__btn{
