--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -596,23 +596,23 @@
                 &::before{
                     position: absolute;
                     content: "";
-                    left: -2px;
-                    top: 5px;
-                    width: 28px;
-                    height: 28px;
-                    background-image: url('../img/list-circle.svg');
-                    background-repeat: no-repeat;
-                    background-size: contain;
-                    background-position: center left;
+                    left: 1px;
+                    top: 7px;
+                    width: 20px;
+                    height: 20px;
+                    border:2.5px solid #FFD7FE;
+                    border-radius: 50%;
                     @include sm{
                         width: 15px;
                         height: 15px;
                     }
                 }
                 &.active::before{
+                    top: 5px;
                     left: 0;
                     width: 22px;
                     height: 22px;
+                    border: 0;
                     background-image: url('../img/listDot.svg');
                     @include sm{
                         width: 15px;
