--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -79,6 +79,7 @@
         align-items: center;
         justify-content: center;
         color: #fff !important;
+        text-transform: capitalize;
         &:hover{
             color: #231F20 !important;
         }
